# pima-classifier

./: README.md
pima-classifier-libtorch/: CMakeLists.txt  setup.sh
pima-classifier-libtorch/src/: pima-classifier.cpp
pima-classifier-pytorch/src/: neural_net.py  neural_net_example.py  neural_net_final.py  neural_net_with_full_noise.py  nn.py  run.sh
